--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Roboto&family=Roboto+Mono&display=swap');
 
+:root {
+  --black: #0f141e;
+  --blue: blue;
+  --gray: #86898f;
+  --gray-light: #f1f1f1;
+
+  --bg-blue: #c1e7f7;
+  --bg-green: #e5ffe7;
+  --bg-red: #ffe5e5;
+  --bg-yellow: #fff9dc;
+
+  --link: #546c9f;
+  --skills-border:#fcb7b7;
+
+  --shadow-foto: rgba(0, 0, 0, 0.25);
+  --shadow-card: rgba(134, 137, 143, 0.25);
+}
+
 body {
-  background-color: #f1f1f1;
-  color: #0f141e;
+  background-color: var(--gray-light);
+  color: var(--black);
   font-size: 16px;
   font-weight: normal;
   font-family: 'Roboto', sans-serif;
 }
 
 a {
-  color: black;
+  color: var(--link);
   text-decoration: none;
 }
 
@@ -18,17 +36,17 @@ a:hover {
 }
 
 a:active {
-  color: blue;
+  color: var(--blue);
 }
 
 a:visited {
-  color: grey;
+  color: var(--link);
 }
 
 .avatar {
   width: 200px;
   border-radius: 28px;
-  box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
+  box-shadow: 4px 4px 14px var(--shadow-foto);
 }
 
 .info {
@@ -37,7 +55,7 @@ a:visited {
 }
 
 .info p {
-  color: #86898f;
+  color: var(--gray);
   margin: 0;
   font-style: italic;
   text-decoration: none;
@@ -65,26 +83,58 @@ a:visited {
   margin: auto;
 }
 
-.bg-yellow {
-  background: #fff9dc;
-}
-
-.bg-green {
-  background: #e5ffe7;
-}
-
-.bg-red {
-  background: #ffe5e5;
-}
-
 .card {
   padding: 15px 20px;
   margin-bottom: 20px;
   border-radius: 20px;
+  box-shadow: 1px 1px 0px var(--shadow-card);
 }
 
 .card h2 {
   margin-bottom: 10px;
+  color: var(--black);
+}
+
+.card h3 {
+  margin-bottom: 10px;
+  color: var(--black);
+}
+
+.hard-skills {
+  background: var(--bg-red);
+}
+
+.hard-skills span {
+  border: 1px solid var(--skills-border);
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px;
+  color: var(--gray);
+}
+
+.list-skills {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.development {
+  background: var(--bg-green);
+}
+
+.projects {
+  background: var(--bg-green);
+}
+
+.experience {
+  background: var(--bg-blue);
+}
+
+.learn {
+  background: var(--bg-blue);
+}
+
+.hobby {
+  background: var(--bg-yellow);
 }
 
 .list {
@@ -92,80 +142,18 @@ a:visited {
 }
 
 .list li {
-  color: #86898f;
+  color: var(--gray);
   margin-bottom: 10px;
 }
 
-.hh {
-  width: 100%;
-}
-
-.hh td {
-  padding-bottom: 10px;
-}
-
-.hh td:nth-child(2), .hh td:nth-child(3) {
-  color: #86898f;
-}
-
-.link-list {
-  list-style: none;
-  padding: 0;
-}
-
-.link-list li {
+.website {
+  color: var(--gray);
   margin-bottom: 10px;
-  padding-bottom: 5px;
-  border-bottom: 1px solid #ccc;
 }
 
-.contact h2 {
-  text-align: center;
-  padding-top: 30px;
+.website a {
+  color: var(--link);
 }
-
-.form-group label {
-  display: block;
-  font-size: 14px;
-  color: #86898f;
-}
-
-.form-group input,
-.form-group textarea {
-  width: 100%;
-  box-sizing: border-box;
-  border: none;
-  background: transparent;
-  border-bottom: 1px solid #ccc;
-  color: black;
-  padding: 15px 0 10px;
-  outline: none;
-  font-family: inherit;
-}
-
-.row {
-  display: flex;
-  margin-bottom: 20px;
-}
-
-.row > .form-group {
-  width: 50%;
-}
-
-.row > .form-group:first-child {
-    margin-right: 20px;
-}
-
-.btn {
-  background: #111;
-  padding: 15px 20px;
-  color: #fff;
-  border: none;
-  font-family: inherit;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-.btn:hover {
-  opacity: 0.9;
+.website p {
+  color: var(--gray);
 }
