--- a/styles.css
+++ b/styles.css
@@ -12,22 +12,22 @@
   --bg-yellow: #fff9dc;
 
   --link: #546c9f;
-  --skills-border:#fcb7b7;
+  --skills-border: #fcb7b7;
 
   --shadow-foto: rgba(0, 0, 0, 0.25);
   --shadow-card: rgba(134, 137, 143, 0.25);
 }
 
 body {
-  background-color: var(--gray-light);
-  color: var(--black);
+  background-color: #f1f1f1; /* var(--gray-light); */
+  color: #0f141e; /* var(--black); */
   font-size: 16px;
   font-weight: normal;
   font-family: 'Roboto', sans-serif;
 }
 
 a {
-  color: var(--link);
+  color: #546c9f; /* var(--link); */
   text-decoration: none;
 }
 
@@ -36,17 +36,17 @@ a:hover {
 }
 
 a:active {
-  color: var(--blue);
+  color: blue; /* var(--blue); */
 }
 
 a:visited {
-  color: var(--link);
+  color: #546c9f; /* var(--link); */
 }
 
 .avatar {
   width: 200px;
   border-radius: 28px;
-  box-shadow: 4px 4px 14px var(--shadow-foto);
+  box-shadow: 4px 4px 14px gba(0, 0, 0, 0.25); /*var(--shadow-foto); */
 }
 
 .info {
@@ -55,7 +55,7 @@ a:visited {
 }
 
 .info p {
-  color: var(--gray);
+  color: #86898f; /* var(--gray); */
   margin: 0;
   font-style: italic;
   text-decoration: none;
@@ -87,29 +87,29 @@ a:visited {
   padding: 15px 20px;
   margin-bottom: 20px;
   border-radius: 20px;
-  box-shadow: 1px 1px 0px var(--shadow-card);
+  box-shadow: 1px 1px 0px rgba(134, 137, 143, 0.25); /* var(--shadow-card); */
 }
 
 .card h2 {
   margin-bottom: 10px;
-  color: var(--black);
+  color: #0f141e; /* var(--black); */
 }
 
 .card h3 {
   margin-bottom: 10px;
-  color: var(--black);
+  color: #0f141e; /* var(--black); */
 }
 
 .hard-skills {
-  background: var(--bg-red);
+  background: #ffe5e5; /* var(--bg-red); */
 }
 
 .hard-skills span {
-  border: 1px solid var(--skills-border);
+  border: 1px solid #fcb7b7; /* var(--skills-border); */
   border-radius: 5px;
   padding: 5px;
   margin: 5px;
-  color: var(--gray);
+  color: #86898f; /* var(--gray); */
 }
 
 .list-skills {
@@ -118,23 +118,23 @@ a:visited {
 }
 
 .development {
-  background: var(--bg-green);
+  background: #e5ffe7; /* var(--bg-green); */
 }
 
 .projects {
-  background: var(--bg-green);
+  background: #e5ffe7; /* var(--bg-green); */
 }
 
 .experience {
-  background: var(--bg-blue);
+  background: #c1e7f7; /* var(--bg-blue); */
 }
 
 .learn {
-  background: var(--bg-blue);
+  background: #c1e7f7; /* var(--bg-blue); */
 }
 
 .hobby {
-  background: var(--bg-yellow);
+  background: #fff9dc; /* var(--bg-yellow); */
 }
 
 .list {
@@ -142,18 +142,18 @@ a:visited {
 }
 
 .list li {
-  color: var(--gray);
+  color: #86898f; /*var(--gray); */
   margin-bottom: 10px;
 }
 
 .website {
-  color: var(--gray);
+  color: #86898f; /* var(--gray); */
   margin-bottom: 10px;
 }
 
 .website a {
-  color: var(--link);
+  color: #546c9f; /* var(--link); */
 }
 .website p {
-  color: var(--gray);
+  color: #86898f; /* var(--gray); */
 }
